<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.darksite.jazze.DepartActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logoapplication"
        app:srcCompat="@drawable/jazze" />

    <TextView
        android:id="@+id/txtDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/txtCompteExistent"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btnToLogin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDepart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnToInscription"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnToLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@color/colorPrimary"
        android:text="@string/nouveau_compte" />

</RelativeLayout>
