<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.darksite.jazze.BienvenueActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logoapplication"
        app:srcCompat="@drawable/jazze" />

    <ImageView
        android:id="@+id/logoCollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logocollegemaisonneuve"
        app:srcCompat="@drawable/logocollegemaisonneuve" />

    <TextView
        android:id="@+id/tvBienvenue"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/bienvenueTextView"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
</RelativeLayout>
